--- a/net/cacti/Makefile
+++ b/net/cacti/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.24 2014/08/23 12:50:25 adam Exp $
+# $NetBSD: Makefile,v 1.25 2015/03/11 07:39:15 nils Exp $
 
 DISTNAME=	cacti-0.8.8b
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	net
 MASTER_SITES=	http://www.cacti.net/downloads/
 
@@ -35,6 +35,7 @@ BUILD_DEFS+=		PKG_SYSCONFBASE
 PKG_SYSCONFSUBDIR?=	httpd
 EGDIR=			${PREFIX}/share/examples/cacti
 CONF_FILES+=		${EGDIR}/httpd-cacti.conf ${PKG_SYSCONFDIR}/httpd-cacti.conf
+CONF_FILES+=		${EGDIR}/config.php ${CACTIDIR}/include/config.php
 CACTIDIR=		${PREFIX}/share/cacti
 CACTI_LOGDIR?=		${CACTIDIR}/log
 CACTI_RRADIR?=		${CACTIDIR}/rra
@@ -95,8 +96,9 @@ post-extract:
 
 do-install:
 	${INSTALL_DATA} ${WRKDIR}/httpd-cacti.conf ${DESTDIR}${EGDIR}/httpd-cacti.conf
+	${INSTALL_DATA} ${WRKSRC}/include/config.php ${DESTDIR}${EGDIR}/config.php
 	${FIND} ${WRKSRC} -type f -name '*.orig' -exec ${RM} -f {} \;
-	cd ${WRKSRC} && ${PAX} -wr * ${DESTDIR}${CACTIDIR}
+	cd ${WRKSRC} && ${PAX} -rw -s ',\./include/config\.php,,' . ${DESTDIR}${CACTIDIR}
 	${INSTALL_SCRIPT} ${WRKDIR}/cacti-poller ${DESTDIR}${PREFIX}/bin
 
 .include "../../databases/rrdtool/buildlink3.mk"
