--- a/textproc/p5-Pod-Spell/Makefile
+++ b/textproc/p5-Pod-Spell/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.11 2015/03/05 14:41:24 wen Exp $
+# $NetBSD: Makefile,v 1.12 2015/03/12 16:44:04 tnn Exp $
 
 DISTNAME=	Pod-Spell-1.16
 PKGNAME=	p5-${DISTNAME}
+PKGREVISION=	1
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Pod/}
 
@@ -13,6 +14,7 @@ LICENSE=	artistic-2.0
 DEPENDS+=	{perl>=5.9.3,p5-Pod-Escapes>=1.01}:../../textproc/p5-Pod-Escapes
 DEPENDS+=	p5-Lingua-EN-Inflect>=0:../../textproc/p5-Lingua-EN-Inflect
 DEPENDS+=	p5-Class-Tiny>=0:../../devel/p5-Class-Tiny
+DEPENDS+=	p5-File-ShareDir>=0:../../devel/p5-File-ShareDir
 DEPENDS+=	p5-File-ShareDir-ProjectDistDir>=0:../../devel/p5-File-ShareDir-ProjectDistDir
 
 PERL5_PACKLIST=		auto/Pod/Spell/.packlist
