--- a/textproc/go-text/Makefile
+++ b/textproc/go-text/Makefile
@@ -1,11 +1,10 @@
-# $NetBSD: Makefile,v 1.2 2015/03/10 20:29:06 bsiegert Exp $
+# $NetBSD: Makefile,v 1.3 2015/03/12 20:55:48 tnn Exp $
 #
 
-DISTNAME=		text
-PKGNAME=		go-${DISTNAME}-20150310
-GITHUB_PROJECT=		text
+DISTNAME=		go-text-20150310
 CATEGORIES=		textproc
 MASTER_SITES=		${MASTER_SITE_GITHUB:=golang/}
+GITHUB_PROJECT=		text
 GITHUB_TAG=		d1927f6997
 
 MAINTAINER=		bsiegert@NetBSD.org
@@ -14,7 +13,7 @@ COMMENT=		Supplementary text processing libraries for Go
 LICENSE=		modified-bsd
 
 GO_SRCPATH=		golang.org/x/text
-GO_DIST_BASE=		${DISTNAME}-${GITHUB_TAG}*
+GO_DIST_BASE=		${GITHUB_PROJECT}-${GITHUB_TAG}*
 
 
 .include "../../lang/go/go-package.mk"
