--- a/textproc/ruby-textpow/Makefile
+++ b/textproc/ruby-textpow/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2015/03/13 16:22:58 taca Exp $
+# $NetBSD: Makefile,v 1.6 2015/03/13 16:24:59 taca Exp $
 
 DISTNAME=	textpow-1.4.0
 CATEGORIES=	textproc
@@ -9,6 +9,8 @@ COMMENT=	Library to parse and process Textmate bundles
 LICENSE=	mit
 
 DEPENDS+=	${RUBY_PKGPREFIX}-plist>=3.0.1:../../textproc/ruby-plist
+
+RUBYGEM_OPTIONS+=	--format-executable
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
