--- a/www/Makefile
+++ b/www/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1092 2015/03/09 13:34:41 imil Exp $
+# $NetBSD: Makefile,v 1.1093 2015/03/13 16:35:09 taca Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -665,6 +665,8 @@ SUBDIR+=	ruby-capybara
 SUBDIR+=	ruby-clearsilver
 SUBDIR+=	ruby-coffee-rails32
 SUBDIR+=	ruby-compass
+SUBDIR+=	ruby-compass-core
+SUBDIR+=	ruby-compass-import-once
 SUBDIR+=	ruby-compass-susy-plugin
 SUBDIR+=	ruby-cookiejar
 SUBDIR+=	ruby-css-parser
