--- a/sysutils/cdbkup/Makefile
+++ b/sysutils/cdbkup/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.21 2014/05/29 23:37:27 wiz Exp $
+# $NetBSD: Makefile,v 1.22 2015/03/14 13:52:45 tnn Exp $
 
 DISTNAME=		cdbkup-1.0
-PKGREVISION=		9
+PKGREVISION=		10
 CATEGORIES=		sysutils
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=cdbkup/}
 
@@ -12,7 +12,7 @@ COMMENT=		CD-R(W) backup/restore system
 DEPENDS+=		{cdrtools,cdrtools-ossdvd}>=1.10:../../sysutils/cdrtools
 
 GNU_CONFIGURE=		YES
-USE_TOOLS+=		cat date gtar perl:run
+USE_TOOLS+=		cat bzip2:run date gtar:run gzip:run perl:run
 CONFIGURE_ENV+=		CAT=${TOOLS_CAT:Q}
 CONFIGURE_ENV+=		DATE=${TOOLS_DATE:Q}
 CONFIGURE_ENV+=		GNUTAR=${TOOLS_GTAR:Q}
