--- a/textproc/p5-Pod-Spell/Makefile
+++ b/textproc/p5-Pod-Spell/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.12 2015/03/12 16:44:04 tnn Exp $
+# $NetBSD: Makefile,v 1.13 2015/03/14 15:23:21 joerg Exp $
 
 DISTNAME=	Pod-Spell-1.16
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Pod/}
 
@@ -15,6 +15,7 @@ DEPENDS+=	{perl>=5.9.3,p5-Pod-Escapes>=1.01}:../../textproc/p5-Pod-Escapes
 DEPENDS+=	p5-Lingua-EN-Inflect>=0:../../textproc/p5-Lingua-EN-Inflect
 DEPENDS+=	p5-Class-Tiny>=0:../../devel/p5-Class-Tiny
 DEPENDS+=	p5-File-ShareDir>=0:../../devel/p5-File-ShareDir
+DEPENDS+=	p5-File-ShareDir-Install>=0:../../devel/p5-File-ShareDir-Install
 DEPENDS+=	p5-File-ShareDir-ProjectDistDir>=0:../../devel/p5-File-ShareDir-ProjectDistDir
 
 PERL5_PACKLIST=		auto/Pod/Spell/.packlist
