--- a/devel/p5-CPAN/Makefile
+++ b/devel/p5-CPAN/Makefile
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.12 2014/05/31 11:42:32 wiz Exp $
+# $NetBSD: Makefile,v 1.13 2015/03/15 13:16:17 mef Exp $
 
-DISTNAME=	CPAN-2.05
+DISTNAME=	CPAN-2.10
 PKGNAME=	p5-${DISTNAME}00
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=../../authors/id/A/AN/ANDK/}
+MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=CPAN/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://metacpan.org/release/CPAN
