--- a/devel/py-requests/Makefile
+++ b/devel/py-requests/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.13 2015/03/09 16:57:04 imil Exp $
+# $NetBSD: Makefile,v 1.14 2015/03/15 21:32:27 wiz Exp $
 
 DISTNAME=	requests-2.5.3
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
+PKGREVISION=	1
 CATEGORIES=	devel www
 MASTER_SITES=	https://pypi.python.org/packages/source/r/requests/
 
@@ -9,12 +10,6 @@ MAINTAINER=	imil@NetBSD.org
 HOMEPAGE=	http://docs.python-requests.org/en/latest/
 COMMENT=	HTTP library, written in Python, for human beings
 LICENSE=	apache-2.0
-
-DEPENDS+=	${PYPKGPREFIX}-docutils>=0.10:../../textproc/py-docutils
-DEPENDS+=	${PYPKGPREFIX}-jinja2-[0-9]*:../../textproc/py-jinja2
-DEPENDS+=	${PYPKGPREFIX}-markupsafe-[0-9]*:../../textproc/py-markupsafe
-DEPENDS+=	${PYPKGPREFIX}-pygments-[0-9]*:../../textproc/py-pygments
-DEPENDS+=	${PYPKGPREFIX}-sphinx>=1.1.3:../../textproc/py-sphinx
 
 USE_LANGUAGES=	c
 REPLACE_PYTHON=	requests/certs.py requests/packages/chardet/chardetect.py
