--- a/lang/openjdk8/Makefile
+++ b/lang/openjdk8/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.42 2016/10/27 13:06:42 ryoon Exp $
+# $NetBSD: Makefile,v 1.43 2016/12/15 23:56:53 joerg Exp $
 
 DISTNAME=	openjdk-1.8.112-20161027
 PKGNAME=	openjdk8-1.8.112
+PKGREVISION=	1
 CATEGORIES=	lang
 MASTER_SITES=	${MASTER_SITE_LOCAL:=openjdk7/}
 EXTRACT_SUFX=	.tar.xz
