--- a/x11/qt4-tools/Makefile
+++ b/x11/qt4-tools/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.67 2016/03/05 11:28:00 jperkin Exp $
+# $NetBSD: Makefile,v 1.68 2016/12/16 00:06:46 joerg Exp $
 
-PKGREVISION= 1
+PKGREVISION= 2
 .include "../../x11/qt4-libs/Makefile.common"
 
 PKGNAME=	qt4-tools-${QTVERSION}
