--- a/devel/p5-Config-IniFiles/Makefile
+++ b/devel/p5-Config-IniFiles/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.46 2016/08/07 06:26:09 wen Exp $
+# $NetBSD: Makefile,v 1.47 2016/12/16 12:48:02 mef Exp $
 
-DISTNAME=	Config-IniFiles-2.93
+DISTNAME=	Config-IniFiles-2.94
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Config/}
