--- a/archivers/p5-Archive-Tar/Makefile
+++ b/archivers/p5-Archive-Tar/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.68 2016/11/20 20:23:41 wiz Exp $
+# $NetBSD: Makefile,v 1.69 2016/12/16 13:10:22 mef Exp $
 
-DISTNAME=	Archive-Tar-2.18
+DISTNAME=	Archive-Tar-2.20
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	archivers perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Archive/}
