--- a/security/gnupg21/Makefile
+++ b/security/gnupg21/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.24 2016/12/04 05:17:40 ryoon Exp $
+# $NetBSD: Makefile,v 1.25 2016/12/16 16:21:54 hans Exp $
 
 DISTNAME=	gnupg-2.1.14
 PKGNAME=	${DISTNAME:S/gnupg-/gnupg21-/}
@@ -30,6 +30,7 @@ TEST_TARGET=		check
 CONFIGURE_ARGS.SunOS+=	ac_cv_func_getaddrinfo=yes
 
 LDFLAGS.Darwin+=	-lresolv
+LDFLAGS.SunOS+=		-lsocket
 
 .include "options.mk"
 
