--- a/www/p5-HTML-Lint/Makefile
+++ b/www/p5-HTML-Lint/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.14 2016/06/08 19:25:03 wiz Exp $
+# $NetBSD: Makefile,v 1.15 2016/12/17 02:53:10 wen Exp $
 
-DISTNAME=	HTML-Lint-2.22
+DISTNAME=	HTML-Lint-2.24
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	2
 CATEGORIES=	www perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=HTML/}
 
