--- a/meta-pkgs/kde3/Makefile.kde3
+++ b/meta-pkgs/kde3/Makefile.kde3
@@ -6,8 +6,8 @@
 
 CATEGORIES+=	kde
 _KDE_VERSION=	3.5.10
-MASTER_SITE_KDE_I18N=	${MASTER_SITE_KDE:=3.5.10/src/kde-i18n/}
-MASTER_SITES?=	${MASTER_SITE_KDE:=3.5.10/src/}
+MASTER_SITE_KDE_I18N=	${MASTER_SITE_KDE:H:H:=/Attic/3.5.10/src/kde-i18n/}
+MASTER_SITES?=	${MASTER_SITE_KDE:H:H:=/Attic/3.5.10/src/}
 EXTRACT_SUFX?=	.tar.bz2
 
 MAINTAINER?=	pkgsrc-users@NetBSD.org
